--- a/p-a-t/src/main/resources/application.properties
+++ b/p-a-t/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.application.name=p-a-t
-
-spring.datasource.url=jdbc:mysql://localhost:3306/bdd2?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/bdd2?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-server.port=8080
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.port=8082
 spring.sql.init.mode=always
-
-
-
